y.output
Terminals which are not used

   TK_NOTIN


Grammar

    0 $accept: expr_list $end

    1 expr_list: expr
    2          | expr_list ',' expr

    3 expr: literal_value
    4     | expr cmp_op expr
    5     | expr TK_IN '(' expr_list ')'
    6     | expr TK_NOT TK_IN '(' expr_list ')'
    7     | function_name '(' ')'
    8     | function_name '(' expr_list ')'
    9     | expr TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr TK_AND_LOGIC expr
   11     | expr TK_OR_LOGIC expr
   12     | TK_NOT expr
   13     | '(' expr ')'

   14 cmp_op: TK_EQ
   15       | TK_NE
   16       | TK_GT
   17       | TK_LT
   18       | TK_GE
   19       | TK_LE

   20 literal_value: TK_INT_LITERAL
   21              | TK_DOUBLE_LITERAL
   22              | TK_STRING_LITERAL
   23              | TK_IDENTITY_LITERAL

   24 function_name: TK_MD5MOD
   25              | TK_STRCMP


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 6 7 8 13
')' (41) 5 6 7 8 13
',' (44) 2
error (256)
TK_AND_LOGIC (258) 10
TK_OR_LOGIC (259) 11
TK_BETWEEN (260) 9
TK_LE (261) 19
TK_GE (262) 18
TK_LT (263) 17
TK_GT (264) 16
TK_NE (265) 15
TK_EQ (266) 14
TK_NOT (267) 6 12
TK_IN (268) 5 6
BINOPX (269)
TK_AND_KEYWORD (270) 9
TK_NOTIN (271)
TK_INT_LITERAL (272) 20
TK_DOUBLE_LITERAL (273) 21
TK_STRING_LITERAL (274) 22
TK_MD5MOD (275) 24
TK_STRCMP (276) 25
TK_IDENTITY_LITERAL (277) 23


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
expr_list (27)
    on left: 1 2, on right: 0 2 5 6 8
expr (28)
    on left: 3 4 5 6 7 8 9 10 11 12 13, on right: 1 2 4 5 6 9 10 11
    12 13
cmp_op (29)
    on left: 14 15 16 17 18 19, on right: 4
literal_value (30)
    on left: 20 21 22 23, on right: 3
function_name (31)
    on left: 24 25, on right: 7 8


state 0

    0 $accept: . expr_list $end

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr_list      go to state 9
    expr           go to state 10
    literal_value  go to state 11
    function_name  go to state 12


state 1

   12 expr: TK_NOT . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 13
    literal_value  go to state 11
    function_name  go to state 12


state 2

   20 literal_value: TK_INT_LITERAL .

    $default  reduce using rule 20 (literal_value)


state 3

   21 literal_value: TK_DOUBLE_LITERAL .

    $default  reduce using rule 21 (literal_value)


state 4

   22 literal_value: TK_STRING_LITERAL .

    $default  reduce using rule 22 (literal_value)


state 5

   24 function_name: TK_MD5MOD .

    $default  reduce using rule 24 (function_name)


state 6

   25 function_name: TK_STRCMP .

    $default  reduce using rule 25 (function_name)


state 7

   23 literal_value: TK_IDENTITY_LITERAL .

    $default  reduce using rule 23 (literal_value)


state 8

   13 expr: '(' . expr ')'

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 14
    literal_value  go to state 11
    function_name  go to state 12


state 9

    0 $accept: expr_list . $end
    2 expr_list: expr_list . ',' expr

    $end  shift, and go to state 15
    ','   shift, and go to state 16


state 10

    1 expr_list: expr .
    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr

    TK_AND_LOGIC  shift, and go to state 17
    TK_OR_LOGIC   shift, and go to state 18
    TK_BETWEEN    shift, and go to state 19
    TK_LE         shift, and go to state 20
    TK_GE         shift, and go to state 21
    TK_LT         shift, and go to state 22
    TK_GT         shift, and go to state 23
    TK_NE         shift, and go to state 24
    TK_EQ         shift, and go to state 25
    TK_NOT        shift, and go to state 26
    TK_IN         shift, and go to state 27

    $default  reduce using rule 1 (expr_list)

    cmp_op  go to state 28


state 11

    3 expr: literal_value .

    $default  reduce using rule 3 (expr)


state 12

    7 expr: function_name . '(' ')'
    8     | function_name . '(' expr_list ')'

    '('  shift, and go to state 29


state 13

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr
   12     | TK_NOT expr .

    $default  reduce using rule 12 (expr)

    cmp_op  go to state 28


state 14

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr
   13     | '(' expr . ')'

    TK_AND_LOGIC  shift, and go to state 17
    TK_OR_LOGIC   shift, and go to state 18
    TK_BETWEEN    shift, and go to state 19
    TK_LE         shift, and go to state 20
    TK_GE         shift, and go to state 21
    TK_LT         shift, and go to state 22
    TK_GT         shift, and go to state 23
    TK_NE         shift, and go to state 24
    TK_EQ         shift, and go to state 25
    TK_NOT        shift, and go to state 26
    TK_IN         shift, and go to state 27
    ')'           shift, and go to state 30

    cmp_op  go to state 28


state 15

    0 $accept: expr_list $end .

    $default  accept


state 16

    2 expr_list: expr_list ',' . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 31
    literal_value  go to state 11
    function_name  go to state 12


state 17

   10 expr: expr TK_AND_LOGIC . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 32
    literal_value  go to state 11
    function_name  go to state 12


state 18

   11 expr: expr TK_OR_LOGIC . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 33
    literal_value  go to state 11
    function_name  go to state 12


state 19

    9 expr: expr TK_BETWEEN . expr TK_AND_KEYWORD expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 34
    literal_value  go to state 11
    function_name  go to state 12


state 20

   19 cmp_op: TK_LE .

    $default  reduce using rule 19 (cmp_op)


state 21

   18 cmp_op: TK_GE .

    $default  reduce using rule 18 (cmp_op)


state 22

   17 cmp_op: TK_LT .

    $default  reduce using rule 17 (cmp_op)


state 23

   16 cmp_op: TK_GT .

    $default  reduce using rule 16 (cmp_op)


state 24

   15 cmp_op: TK_NE .

    $default  reduce using rule 15 (cmp_op)


state 25

   14 cmp_op: TK_EQ .

    $default  reduce using rule 14 (cmp_op)


state 26

    6 expr: expr TK_NOT . TK_IN '(' expr_list ')'

    TK_IN  shift, and go to state 35


state 27

    5 expr: expr TK_IN . '(' expr_list ')'

    '('  shift, and go to state 36


state 28

    4 expr: expr cmp_op . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 37
    literal_value  go to state 11
    function_name  go to state 12


state 29

    7 expr: function_name '(' . ')'
    8     | function_name '(' . expr_list ')'

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8
    ')'                  shift, and go to state 38

    expr_list      go to state 39
    expr           go to state 10
    literal_value  go to state 11
    function_name  go to state 12


state 30

   13 expr: '(' expr ')' .

    $default  reduce using rule 13 (expr)


state 31

    2 expr_list: expr_list ',' expr .
    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr

    TK_AND_LOGIC  shift, and go to state 17
    TK_OR_LOGIC   shift, and go to state 18
    TK_BETWEEN    shift, and go to state 19
    TK_LE         shift, and go to state 20
    TK_GE         shift, and go to state 21
    TK_LT         shift, and go to state 22
    TK_GT         shift, and go to state 23
    TK_NE         shift, and go to state 24
    TK_EQ         shift, and go to state 25
    TK_NOT        shift, and go to state 26
    TK_IN         shift, and go to state 27

    $default  reduce using rule 2 (expr_list)

    cmp_op  go to state 28


state 32

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   10     | expr TK_AND_LOGIC expr .
   11     | expr . TK_OR_LOGIC expr

    TK_OR_LOGIC  shift, and go to state 18
    TK_BETWEEN   shift, and go to state 19
    TK_LE        shift, and go to state 20
    TK_GE        shift, and go to state 21
    TK_LT        shift, and go to state 22
    TK_GT        shift, and go to state 23
    TK_NE        shift, and go to state 24
    TK_EQ        shift, and go to state 25
    TK_NOT       shift, and go to state 26
    TK_IN        shift, and go to state 27

    $default  reduce using rule 10 (expr)

    cmp_op  go to state 28


state 33

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr
   11     | expr TK_OR_LOGIC expr .

    TK_BETWEEN  shift, and go to state 19
    TK_LE       shift, and go to state 20
    TK_GE       shift, and go to state 21
    TK_LT       shift, and go to state 22
    TK_GT       shift, and go to state 23
    TK_NE       shift, and go to state 24
    TK_EQ       shift, and go to state 25
    TK_NOT      shift, and go to state 26
    TK_IN       shift, and go to state 27

    $default  reduce using rule 11 (expr)

    cmp_op  go to state 28


state 34

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
    9     | expr TK_BETWEEN expr . TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr

    TK_AND_LOGIC    shift, and go to state 17
    TK_OR_LOGIC     shift, and go to state 18
    TK_BETWEEN      shift, and go to state 19
    TK_LE           shift, and go to state 20
    TK_GE           shift, and go to state 21
    TK_LT           shift, and go to state 22
    TK_GT           shift, and go to state 23
    TK_NE           shift, and go to state 24
    TK_EQ           shift, and go to state 25
    TK_NOT          shift, and go to state 26
    TK_IN           shift, and go to state 27
    TK_AND_KEYWORD  shift, and go to state 40

    cmp_op  go to state 28


state 35

    6 expr: expr TK_NOT TK_IN . '(' expr_list ')'

    '('  shift, and go to state 41


state 36

    5 expr: expr TK_IN '(' . expr_list ')'

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr_list      go to state 42
    expr           go to state 10
    literal_value  go to state 11
    function_name  go to state 12


state 37

    4 expr: expr . cmp_op expr
    4     | expr cmp_op expr .
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr

    $default  reduce using rule 4 (expr)

    cmp_op  go to state 28


state 38

    7 expr: function_name '(' ')' .

    $default  reduce using rule 7 (expr)


state 39

    2 expr_list: expr_list . ',' expr
    8 expr: function_name '(' expr_list . ')'

    ','  shift, and go to state 16
    ')'  shift, and go to state 43


state 40

    9 expr: expr TK_BETWEEN expr TK_AND_KEYWORD . expr

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr           go to state 44
    literal_value  go to state 11
    function_name  go to state 12


state 41

    6 expr: expr TK_NOT TK_IN '(' . expr_list ')'

    TK_NOT               shift, and go to state 1
    TK_INT_LITERAL       shift, and go to state 2
    TK_DOUBLE_LITERAL    shift, and go to state 3
    TK_STRING_LITERAL    shift, and go to state 4
    TK_MD5MOD            shift, and go to state 5
    TK_STRCMP            shift, and go to state 6
    TK_IDENTITY_LITERAL  shift, and go to state 7
    '('                  shift, and go to state 8

    expr_list      go to state 45
    expr           go to state 10
    literal_value  go to state 11
    function_name  go to state 12


state 42

    2 expr_list: expr_list . ',' expr
    5 expr: expr TK_IN '(' expr_list . ')'

    ','  shift, and go to state 16
    ')'  shift, and go to state 46


state 43

    8 expr: function_name '(' expr_list ')' .

    $default  reduce using rule 8 (expr)


state 44

    4 expr: expr . cmp_op expr
    5     | expr . TK_IN '(' expr_list ')'
    6     | expr . TK_NOT TK_IN '(' expr_list ')'
    9     | expr . TK_BETWEEN expr TK_AND_KEYWORD expr
    9     | expr TK_BETWEEN expr TK_AND_KEYWORD expr .
   10     | expr . TK_AND_LOGIC expr
   11     | expr . TK_OR_LOGIC expr

    $default  reduce using rule 9 (expr)

    cmp_op  go to state 28


state 45

    2 expr_list: expr_list . ',' expr
    6 expr: expr TK_NOT TK_IN '(' expr_list . ')'

    ','  shift, and go to state 16
    ')'  shift, and go to state 47


state 46

    5 expr: expr TK_IN '(' expr_list ')' .

    $default  reduce using rule 5 (expr)


state 47

    6 expr: expr TK_NOT TK_IN '(' expr_list ')' .

    $default  reduce using rule 6 (expr)
